# drawing_window

./: .gitignore  CMakeLists.txt  README.md  training_30_3-0_10_deep
src/: main.cpp  mouse_drawing.cpp  mouse_drawing.h  window.cpp  window.h
